[gd_scene load_steps=3 format=3 uid="uid://dvisx50b4ko85"]

[ext_resource type="Script" path="res://Scripts/Control.gd" id="1_qned4"]
[ext_resource type="Texture2D" uid="uid://w4uevn7obhnj" path="res://assets/background/Free Pixel Art Forest/Preview/Background.png" id="2_2bkro"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qned4")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.862745)
position = Vector2(577, 201.25)
scale = Vector2(1.24353, 1.12295)
texture = ExtResource("2_2bkro")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 69.0
offset_top = 54.0
offset_right = 371.0
offset_bottom = 195.0
grow_horizontal = 2

[node name="UserAccountLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 23.0
offset_top = 32.0
offset_right = 125.0
offset_bottom = 55.0
text = "User account"

[node name="UserAccountText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 150.0
offset_top = 33.0
offset_right = 252.0
offset_bottom = 56.0
text = "User account"

[node name="DisplayName" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 23.0
offset_top = 59.0
offset_right = 128.0
offset_bottom = 82.0
text = "Display name"

[node name="DisplayNameText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 150.0
offset_top = 60.0
offset_right = 252.0
offset_bottom = 83.0
text = "User account"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
offset_left = 149.0
offset_top = 52.0
offset_right = 549.0
offset_bottom = 193.0

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 27.0
offset_top = 21.0
offset_right = 89.0
offset_bottom = 44.0
text = "Email:
"

[node name="EmailInput" type="LineEdit" parent="Panel2"]
layout_mode = 0
offset_left = 99.0
offset_top = 19.0
offset_right = 258.0
offset_bottom = 50.0
text = "t@gmail.com"

[node name="Label2" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 13.0
offset_top = 65.0
offset_right = 92.0
offset_bottom = 88.0
text = "Password:
"

[node name="PasswordInput" type="LineEdit" parent="Panel2"]
layout_mode = 0
offset_left = 100.0
offset_top = 60.0
offset_right = 259.0
offset_bottom = 91.0
text = "password69"

[node name="LoginButton" type="Button" parent="Panel2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -17.0
grow_horizontal = 0
grow_vertical = 0
text = "Submit
"

[node name="Panel5" type="Panel" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 207.0
offset_right = 415.0
offset_bottom = 549.0

[node name="question_text" type="LineEdit" parent="Panel5"]
layout_mode = 0
offset_left = 73.0
offset_top = 14.0
offset_right = 342.0
offset_bottom = 45.0
placeholder_text = "Click to start typing question"
alignment = 1

[node name="option_1" type="LineEdit" parent="Panel5"]
layout_mode = 0
offset_left = 74.0
offset_top = 62.0
offset_right = 343.0
offset_bottom = 93.0
placeholder_text = "Option1"
alignment = 1

[node name="option_2" type="LineEdit" parent="Panel5"]
layout_mode = 0
offset_left = 76.0
offset_top = 110.0
offset_right = 345.0
offset_bottom = 141.0
placeholder_text = "Option2"
alignment = 1

[node name="option_3" type="LineEdit" parent="Panel5"]
layout_mode = 0
offset_left = 77.0
offset_top = 159.0
offset_right = 346.0
offset_bottom = 190.0
placeholder_text = "Option3"
alignment = 1

[node name="option_4" type="LineEdit" parent="Panel5"]
layout_mode = 0
offset_left = 78.0
offset_top = 209.0
offset_right = 347.0
offset_bottom = 240.0
placeholder_text = "Option4"
alignment = 1

[node name="correct_answer" type="LineEdit" parent="Panel5"]
layout_mode = 0
offset_left = 79.0
offset_top = 254.0
offset_right = 348.0
offset_bottom = 285.0
placeholder_text = "Correct answer"
alignment = 1

[node name="submit_button" type="Button" parent="Panel5"]
layout_mode = 0
offset_left = 218.0
offset_top = 301.0
offset_right = 347.0
offset_bottom = 331.0
text = "Submit"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 467.0
offset_top = 206.0
offset_right = 771.0
offset_bottom = 549.0

[node name="LineEdit" type="LineEdit" parent="Panel3"]
layout_mode = 0
offset_left = 23.0
offset_top = 26.0
offset_right = 269.0
offset_bottom = 210.0
placeholder_text = "Add question"
alignment = 1

[node name="LineEdit2" type="LineEdit" parent="Panel3"]
layout_mode = 0
offset_left = 29.0
offset_top = 236.0
offset_right = 271.0
offset_bottom = 264.0
placeholder_text = "Keyword"
alignment = 1

[node name="submit_button2" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 134.0
offset_top = 299.0
offset_right = 263.0
offset_bottom = 329.0
text = "Submit"

[node name="Panel4" type="Panel" parent="."]
layout_mode = 0
offset_left = 822.0
offset_top = 204.0
offset_right = 1119.0
offset_bottom = 548.0

[node name="Button" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 175.0
offset_top = 303.0
offset_right = 283.0
offset_bottom = 334.0
text = "Submit
"

[node name="LineEdit3" type="LineEdit" parent="Panel4"]
layout_mode = 0
offset_left = 28.0
offset_top = 31.0
offset_right = 274.0
offset_bottom = 215.0
placeholder_text = "Add question"
alignment = 1

[node name="CheckButton" type="CheckButton" parent="Panel4"]
layout_mode = 0
offset_left = 128.0
offset_top = 234.0
offset_right = 172.0
offset_bottom = 264.0

[node name="Label" type="Label" parent="Panel4"]
layout_mode = 0
offset_left = 48.0
offset_top = 238.0
offset_right = 88.0
offset_bottom = 258.0
text = "False"

[node name="Label2" type="Label" parent="Panel4"]
layout_mode = 0
offset_left = 213.0
offset_top = 239.0
offset_right = 253.0
offset_bottom = 259.0
text = "True"

[node name="Done" type="Button" parent="."]
layout_mode = 0
offset_left = 938.0
offset_top = 575.0
offset_right = 1122.0
offset_bottom = 618.0
text = "Done"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_right = 135.0
offset_bottom = 38.0
text = "Back
"

[connection signal="pressed" from="Panel2/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="Panel5/submit_button" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="Panel3/submit_button2" to="." method="_on_submit_button_2_pressed"]
[connection signal="pressed" from="Panel4/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Panel4/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
